# Resume-optimizer

./: .gitignore  README.md
backend/resume-optimizer/: main.py  pyproject.toml
backend/resume-optimizer/ai_services/: agents.py  structure_output.py  tools.py
backend/resume-optimizer/utils/: document_processing.py
frontend/resume-optimizer/: index.html  package-lock.json  package.json  vite.config.ts
frontend/resume-optimizer/src/: App.tsx  index.css
frontend/resume-optimizer/src/components/: Analysis.tsx  Button.tsx  ResumeContainer.tsx  ResumeVersion.tsx  modals.tsx  samples.tsx
frontend/resume-optimizer/src/components/Header/: HeaderSection.tsx
frontend/resume-optimizer/src/components/Recorder/: Recorder.tsx
frontend/resume-optimizer/src/components/Template/: Container.tsx
frontend/resume-optimizer/src/components/modal/: modal.tsx
